chore: move to java 11